--- a/src/ejs/_footer.ejs
+++ b/src/ejs/_footer.ejs
@@ -3,7 +3,7 @@
         <ul class="footer__links">
             <li><a href="/lineup.html">LINE UP</a></li>
             <li><a href="#shop">SHOP</a></li>
-            <li><a href="https://www.instagram.com/momochi.661/?hl=ja" target="_blank">Instagram</a></li>
+            <li><a href="https://www.instagram.com/louer_official/" target="_blank">Instagram</a></li>
         </ul>
         <small>©2022 LOUER</small>
     </div>
