--- a/src/ejs/_headersp.ejs
+++ b/src/ejs/_headersp.ejs
@@ -24,7 +24,7 @@
       <ul class="drawer-menu nav__menu">
         <li><a class="drawer-menu-item" href="/lineup.html"><span>LINE UP</span><span class="nav__menu--arrow">&#8594;</span></a></li>
         <li><a class="drawer-menu-item" href="#shop"><span>SHOP</span><span class="nav__menu--arrow">&#8594;</span></a></li>
-        <li><a class="drawer-menu-item" href="https://www.instagram.com/momochi.661/?hl=ja" rel="noopener" target="_blank"><span>Instagram</span><span class="nav__menu--arrow">&#8594;</span></a></li>
+        <li><a class="drawer-menu-item" href="https://www.instagram.com/louer_official/" rel="noopener" target="_blank"><span>Instagram</span><span class="nav__menu--arrow">&#8594;</span></a></li>
         <li><a class="drawer-menu-item" href="https://twitter.com/momochi661" rel="noopener" target="_blank"><span>Twitter</span><span class="nav__menu--arrow">&#8594;</span></a></li>
       </ul>
     </nav>
