--- a/src/sass/contents/_lineup.scss
+++ b/src/sass/contents/_lineup.scss
@@ -116,7 +116,7 @@
 }
 
 .lineup{
-    font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
+    font-family: Hiragino Sans, "ヒラギノ角ゴシック", "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
     color: base.$BC;
     padding: 16.7vw 5vw 0;
     &__ttl{
