--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -15,6 +15,8 @@ $BP: 600px;
 $PCW: 1025px;
 $PATH: "../img/";
 
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200;300;400;500;600;700;900&family=Outfit:wght@100;200;400&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400&display=swap');
 
 // スマホ設定（599px以下）
@@ -42,3 +44,16 @@ $PATH: "../img/";
      width: 100%;
      height: 100%;
   }
+
+
+  div.vid_contents {
+    width: 100%;/*背景色を横幅いっぱいに広げる*/
+    text-align: center;
+    margin: auto;
+    padding: 0;/*ここで動画の周りの余白を調整*/
+    }
+    video.vid_main {
+    width: 100%;
+    max-width: 920px;/*PC版での最大幅*/
+    }
+    
