--- a/src/ejs/_header.ejs
+++ b/src/ejs/_header.ejs
@@ -1,6 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ja">
 <head>
+
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -26,15 +27,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta name="author" content="<%= meta.author %>">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-<meta property="og:url" content="https://www.louer.jp/" />
+<link rel="canonical" href="https://www.louer.jp">
+<meta property="og:url" content="https://www.louer.jp" />
 <meta property="og:type" content="product" />
 <meta property="og:title" content="<%= meta.title %>" />
 <meta property="og:description" content="<%= meta.description %>" />
 <meta property="og:site_name" content="LOUER 公式" />
-<meta property="og:image" content="../img/ogp-B.png" />
-<meta property="og:locale" content="ja_JP"  />
+<meta property="og:image" content="http://www.louer.jp/ogp.png"/>
 
+<meta name="twitter:card" content="summary_large_image">
+<!-- <meta name="twitter:site" content="@saruwakakun" /> -->
 <link rel="icon" href="../img/favicon.ico" />
 
 
