--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -79,14 +79,15 @@
                 <section class="campaign" id="campaign">
                     <h2 class="campaign__ttl">campaign</h2>
                     <div class="campaign__inner">
-                        <a href="https://www.qoo10.jp/g/985370291" target="_blank" class="campaign__link">
-                            <p class="campaign__link--date">2022.05.27</p>
-                            <p class="campaign__link--text">【最大48％OFF】Qoo10メガ割にて先行予約販売中！</p>
-                        </a>
-                        <!-- <a href="https://www.lilyanna.jp/fs/lilyanna/louer-1day-2set" target="_blank" class="campaign__link">
+                        <a href="https://www.lilyanna.jp/fs/lilyanna/louer-1day-2set" target="_blank" class="campaign__link">
                             <p class="campaign__link--date">22022.06.06</p>
                             <p class="campaign__link--text">【発売記念キャンペーン】期間限定★6/13まで使える10％OFFクーポン配布中！</p>
+                        </a>
+                        <!-- <a href="https://www.qoo10.jp/g/985370291" target="_blank" class="campaign__link">
+                            <p class="campaign__link--date">2022.05.27</p>
+                            <p class="campaign__link--text">【最大48％OFF】Qoo10メガ割にて先行予約販売中！</p>
                         </a> -->
+ 
 
                     </div>
                 </section>
