--- a/src/ejs/_explain.ejs
+++ b/src/ejs/_explain.ejs
@@ -31,7 +31,7 @@
                     <img src="../img/img_feature03b.png" alt="03 紫外線から瞳を守る UVカット機能">
                 </li>
                 <li>
-                    <img src="../img/img_feature04b.png" alt="04 色素に触れず安心 サンドイッチ構造">
+                    <img src="../img/img_feature04c.png" alt="04 色素に触れず安心 色素内包の構造">
                 </li>
                 <li>
                     <img src="../img/img_feature05b.png" alt="05 快適な着け心地 なめらかエッジ">
