--- a/src/ejs/_shop.ejs
+++ b/src/ejs/_shop.ejs
@@ -16,7 +16,7 @@
             </a>
         </li>
         <li>
-                <a href="https://www.amazon.co.jp/dp/B0B2D7S3BP" target="_blank" rel="noopener" class="">
+                <a href="https://www.amazon.co.jp/dp/B0B24N31M5" target="_blank" rel="noopener" class="">
 
                 <span class="shop__links--name"><b>Amazon</b>で購入する</span>
                 <span class="shop__links--arrow">&#8594;</span>
