--- a/src/ejs/_explain.ejs
+++ b/src/ejs/_explain.ejs
@@ -41,6 +41,8 @@
     </div>
 </section>
 
+
+
 <section class="spec" id="spec">
     <h2 class="spec__ttl">LENSES SPEC</h2>
     <div class="spec__inner">
@@ -85,6 +87,9 @@
             </li>
         </ul>
 
+        <div class="youtube" style="margin-bottom: 20px;">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/40j8Enn7Qfg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
         <div class="spec__attention">
             <h3 class="spec__attention--ttl">使用上の注意</h3>
             <p class="spec__attention--txt">●コンタクトレンズは高度管理医療機器です。</p>
